--- a/MODULE_1/1-5.MD
+++ b/MODULE_1/1-5.MD
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию «2.4. Инструменты Git»
+## 2.4. Инструменты Git - Николюкин Максим
 
 1. Найдите полный хеш и комментарий коммита, хеш которого начинается на aefea. 
 
